[package]
name = "toml-env"
version = "1.2.0"
edition = "2021"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
description = "A simple configuration library using TOML"
categories = ["config"]
keywords = ["configuration", "environment", "env", "dotenv", "toml"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kellpossible/toml-env"

[dependencies]
serde = "1.0.188"
toml = "0.8.0"
serde-toml-merge = "0.3.2"
thiserror = "1.0.48"
log = { version = "0.4.20", optional = true }

[dev-dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
tempfile = "3.8.0"
